# SteeringWheel

./: CMakeLists.txt  setup.sh
motor_src/: CMakeLists.txt  main.c
motor_src/encoder/: encoder.c  encoder.h
motor_src/inc/: stm32_assert.h  stm32f4xx_hal_conf.h
motor_src/mcu/: mcu.c  mcu.h
res/: ms1.asc  ms1.net  ms1.raw
src/: CMakeLists.txt  README.md  main.c  packet.c  tusb_config.h  usb_descriptors.c
steering_src/: main.c
